# pger

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: update-version.py
src/pger/: __init__.py  __main__.py  const.py  pypi.py
src/pger/templates/: MANIFEST.in  README.md  pyproject.toml  python-publish.yml  update-version.py
src/tests/: conftest.py
