[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "{repo}"
authors = [
    {{ name = "{user}" }},
]
description = "python package {repo}"
keywords = ["{repo}"]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version", "dependencies"]


[project.urls]
"Source" = "https://github.com/{user}/{repo}"
"Homepage" = "https://github.com/{user}/{repo}"
"Bug Tracker" = "https://github.com/{user}/{repo}/issues"


[project.scripts]
{repo} = "{package}:main"


[tool.setuptools]
include-package-data = true


[tool.setuptools.dynamic]
version = {{ attr = "{package}.__version__" }}
dependencies = {{ file = "requirements.txt" }}


[tool.setuptools.packages.find]
where = ["src"]
